Assignment 3 Question 8 completed

--- a/Web Dev Assingment Solutions/Projects/Assignment 3 - Question 6/index.html
+++ b/Web Dev Assingment Solutions/Projects/Assignment 3 - Question 6/index.html
@@ -45,6 +45,16 @@
         </div>
       </div>
     </main>
+
+    <!-- Information section -->
+    <section class=" info-container">
+      <div class="container info">
+        <h1 class="infoHeading">No hidden fees ever</h1>
+        <p>No Joining Fee</p>
+        <p>No Annual Fee</p>
+        <p>No Rewards Redemption Fee</p>
+      </div>
+    </section>
   </div>
 </body>
 
