Assignment 3 - Question 9 completed

--- a/Web Dev Assingment Solutions/Projects/Assignment 3 - Question 6/index.html
+++ b/Web Dev Assingment Solutions/Projects/Assignment 3 - Question 6/index.html
@@ -55,6 +55,42 @@
         <p>No Rewards Redemption Fee</p>
       </div>
     </section>
+
+    <!-- Footer Section -->
+    <footer>
+      <div class="box1">
+        <h3 class="nav-heading">One Card</h3>
+        <p>
+          India's best metal credit card. Built with full stack tech. Backend by the principles of simplicity,
+          transparency, and giving back control to the user.
+        </p>
+      </div>
+      <div class="box2">
+        <div>
+          <h3 class="nav-heading">Navigation</h3>
+          <ul class="navigation">
+            <li>Home</li>
+            <li>About Us</li>
+            <li>Careers</li>
+            <li>Offers</li>
+          </ul>
+        </div>
+        <div>
+          <h3 class="nav-heading">Support</h3>
+          <ul class="support">
+            <li>F.A.Q</li>
+            <li>Cookie Policy</li>
+            <li>Terms of Service</li>
+            <li>Support</li>
+          </ul>
+        </div>
+      </div>
+      <div class="box3">
+        <h3 class="nav-heading">Newsletter</h3>
+        <input type="email" name="" id="email" placeholder="Your email id here">
+        <button class="btn" type="submit">Subscribe</button>
+      </div>
+    </footer>
   </div>
 </body>
 
